fixed alignment

--- a/src/index.css
+++ b/src/index.css
@@ -75,9 +75,10 @@ code {
 }
 
 .profile-img {
-  border-radius: 10px;
-  width: 260px;
-  height: 290px;
+  border-radius: 50px;
+  width: 270px;
+  height: 300px;
+  
 }
 
 .bookmark-img {
